# web_search-and-information-gathering-agent

./: .env  README.md  pyproject.toml
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
